# photo-gallery

./: README.md  index.html
2022 Dolomites/: index.html
2022 Mexico/: index.html
2023 Peru/: index.html
2024 Indonesia/: index.html
sigal/: pyproject.toml  sigal.conf.py
