[project]
name = "photo-gallery.github.io"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ian Polding", email = "ipolding@gmail.com"},
]
dependencies = [
    "sigal>=2.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
